# modern_pybind11_opencv_numpy

./: .gitignore  CMakeLists.txt  README.md
src/pybind/: CMakeLists.txt  CMakeLists.txt.pybind  ConfigPyBind.cmake  matrix-binding.hh  matrix-converter.hh  matrix-converter.inl.hh  module-init.cc
src/test/: CMakeLists.txt  CMakeLists.txt.gtest  ConfigTest.cmake  python-import-test.cc  python-import-test.hh  test-main.cc
src/test/pytestfiles/: numpy_ndarray_shape_test.py  transposed_matrix_test.py
